[gd_scene load_steps=10 format=3 uid="uid://b485gf5b2m4b5"]

[ext_resource type="Script" path="res://scenes/menu/menu_screen.gd" id="1_u5i37"]
[ext_resource type="Texture2D" uid="uid://delfw7augsost" path="res://assets/sprites/titlescreen.jpg" id="2_gcrt3"]
[ext_resource type="Texture2D" uid="uid://d3plcejgltgr4" path="res://assets/sprites/accot_b.png" id="3_qdbcb"]
[ext_resource type="PackedScene" uid="uid://bg2egt0e15teh" path="res://scenes/menu/main_menu.tscn" id="4_km77a"]
[ext_resource type="PackedScene" uid="uid://ddjxb88itxr" path="res://scenes/menu/settings_menu.tscn" id="5_4okib"]
[ext_resource type="PackedScene" uid="uid://ceb4jxjlp6voy" path="res://scenes/menu/audio_menu.tscn" id="6_e24v4"]
[ext_resource type="PackedScene" uid="uid://cfr6k2bd1j8vb" path="res://scenes/menu/load_menu.tscn" id="6_ei828"]
[ext_resource type="PackedScene" uid="uid://bbo2w7mx358v" path="res://scenes/menu/credits_scroll.tscn" id="9_gy0l6"]
[ext_resource type="PackedScene" uid="uid://dt3ljimfmw3ua" path="res://scenes/other/fps_counter.tscn" id="9_o228w"]

[node name="menu_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u5i37")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gcrt3")
expand_mode = 1

[node name="logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -698.0
offset_top = 20.0
offset_right = 657.0
offset_bottom = 305.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_qdbcb")

[node name="fps_counter" parent="." instance=ExtResource("9_o228w")]

[node name="main_menu" parent="." instance=ExtResource("4_km77a")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -441.0
offset_top = 200.0
offset_right = -278.0
offset_bottom = 450.0
grow_horizontal = 0

[node name="load_menu" parent="." instance=ExtResource("6_ei828")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -610.0
offset_top = 200.0
offset_right = -110.0
offset_bottom = 540.0
grow_horizontal = 0

[node name="settings_menu" parent="." instance=ExtResource("5_4okib")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -530.0
offset_top = 200.0
offset_right = -190.0
offset_bottom = 560.0
grow_horizontal = 0

[node name="audio_menu" parent="." instance=ExtResource("6_e24v4")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -484.0
offset_top = 200.0
offset_right = -235.0
offset_bottom = 649.0
grow_horizontal = 0

[node name="credits_scroll" parent="." instance=ExtResource("9_gy0l6")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -462.5
offset_right = 462.5
grow_horizontal = 2

[connection signal="hidden" from="load_menu" to="." method="_on_load_menu_hidden"]
[connection signal="hidden" from="settings_menu" to="." method="_on_settings_menu_hidden"]
[connection signal="hidden" from="audio_menu" to="." method="_on_audio_menu_hidden"]
[connection signal="hidden" from="credits_scroll" to="." method="_on_credits_scroll_hidden"]
